# Quantiloom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.ps1
assets/configs/: cornell_box_procedural.toml  gltf_pbr_test.toml  metal_spheres_test.toml  spectral_single.toml  test_m0.toml
scripts/utils/: generate_cornell_box.py  generate_dummy_lut.py
src/app/: CMakeLists.txt  Quantiloom.rc  SceneBuilder.hpp  Version.hpp.in  main.cpp  main_m1_test.cpp
src/libQuantiloom/: CMakeLists.txt  libQuantiloom.rc
src/libQuantiloom/core/: Config.cpp  Config.hpp  Image.hpp  LUT.hpp  LibVersion.hpp.in  Log.cpp  Log.hpp  Platform.hpp  SpectralCube.hpp  Types.hpp
src/libQuantiloom/io/: GltfLoader.cpp  GltfLoader.hpp  ImageIO.cpp  ImageIO.hpp  LUTLoader.cpp  LUTLoader.hpp  SpectralIO.cpp  SpectralIO.hpp
src/libQuantiloom/renderer/: AccelerationStructure.cpp  AccelerationStructure.hpp  CommandHelper.cpp  CommandHelper.hpp  GpuBuffer.cpp  GpuBuffer.hpp  GpuImage.cpp  GpuImage.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp  TextureManager.cpp  TextureManager.hpp  Upload.cpp  Upload.hpp  VmaImpl.cpp  VulkanContext.cpp  VulkanContext.hpp
src/libQuantiloom/scene/: Camera.cpp  Camera.hpp  Material.hpp  Mesh.hpp  Scene.cpp  Scene.hpp  Texture.hpp
src/shaders/: CMakeLists.txt  README.md  closesthit.rchit  closesthit.spv  common.hlsli  compile_shaders.bat  compile_shaders.sh  miss.rmiss  miss.spv  pbr.hlsli  raygen.rgen  raygen.spv
tools/: setup_dxc.ps1  setup_dxc.sh
